<resources>
    <string name="app_name">جهان سنج</string>
    <string name="text_splash_fragment">آمار به روز کرونا</string>
    <string name="text_all_in_world">مبتلاشدگان</string>
    <string name="text_all_in_world_today">مبتلاشدگان امروز</string>
    <string name="text_deaths">فوت شدگان</string>
    <string name="text_deaths_today">فوت شدگان امروز</string>
    <string name="text_by_country">مشاهده براساس کشور</string>
    <string name="text_recovered">بهبودیافتگان</string>
    <string name="text_recovered_today">بهبودیافتگان امروز</string>
    <string name="text_population">جمعیت</string>
    <string name="img_desc">flag of country</string>
    <string name="bg_desc">background about covid19 stats</string>
    <string name="no_internet_alert_text">از اتصال اینترنت دستگاه اطمینان پیدا کنید</string>
    <string name="no_internet_text">عدم اتصال اینترنت</string>
    <string name="network_error">خطای شبکه</string>
    <string name="internet_error">اینترنت متصل نیست</string>
    <string name="last_update">آخرین بروزرسانی:</string>
    <string name="most_cases">بالاترین مبتلا</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="updated_source">تعداد بروزرسانی منبع</string>
    <string name="continent">قاره</string>
    <string name="mavared_ebtela">موارد ابتلا</string>
    <string name="all">کل</string>
    <string name="today">امروز</string>
    <string name="critical">وضعیت وخیم</string>
    <string name="one_per_million">ازهریک میلیون نفر</string>
    <string name="one_per_people">یک مورد ابتلا از هر</string>
    <string name="one_per_people_death">یک مورد فوت از هر</string>
    <string name="registered_tests">تست های ثبت شده</string>
    <string name="one_per_people_test">یک تست ثبت شده ازهر </string>
    <string name="retry">دوباره تلاش کن</string>
    <string name="mavared_death">موارد فوت</string>
    <string name="mavared_recovered"> موارد بهبود</string>
    <string name="cases_per_population_st">ابتلا نسبت به جمعیت </string>
    <string name="death_per_population_st">فوت نسبت به جمعیت </string>
    <string name="tests_per_population_st">تست نسبت به جمعیت </string>
    <string name="flag_of_country">flag of country</string>
    <string name="link_source">منبع بروزرسانی اطلاعات جهان سنج <a href="https://www.worldometers.info/coronavirus/">worldometers.info/coronavirus</a></string>
    <string name="death_percentage">درصدمرگ</string>
    <string name="z_to_a">Z to A</string>
    <string name="population">جمعیت</string>
    <string name="world">جهان</string>
    <string name="countries">کشورها</string>

</resources>