<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".fragments.DetailCountryFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingVertical="10dp">

        <ImageView
            android:id="@+id/img_flag_df"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:scaleType="centerCrop"
            tools:src="@drawable/ic_launcher_foreground" />

        <TextView
            android:id="@+id/tv_country_name_df"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="5dp"
            android:text="iran"
            android:textSize="22sp" />
    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">


            <View
                android:id="@+id/view"
                android:layout_width="0dp"
                android:layout_height="300dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                android:background="@drawable/shape_bg_item_list"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <View
                android:id="@+id/view10"
                android:layout_width="0dp"
                android:layout_height="200dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="24dp"
                android:layout_marginEnd="16dp"
                android:background="@drawable/shape_bg_item_list"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/view" />

            <View
                android:id="@+id/view11"
                android:layout_width="0dp"
                android:layout_height="300dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                android:background="@drawable/shape_bg_item_list"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/view10" />

            <View
                android:id="@+id/view12"
                android:layout_width="0dp"
                android:layout_height="200dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="24dp"
                android:layout_marginEnd="16dp"
                android:background="@drawable/shape_bg_item_list"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/view11" />

            <TextView
                android:id="@+id/tv_mavared_ebtela_st"
                style="@style/style_tv_title_df"
                android:text="@string/mavared_ebtela"
                app:layout_constraintBottom_toTopOf="@+id/view"
                app:layout_constraintEnd_toEndOf="@+id/view"
                app:layout_constraintTop_toTopOf="@+id/view" />

            <TextView
                android:id="@+id/textView2"
                style="@style/style_tv_title_df"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/registered_tests"
                app:layout_constraintBottom_toTopOf="@+id/view10"
                app:layout_constraintEnd_toEndOf="@+id/view10"
                app:layout_constraintTop_toTopOf="@+id/view10" />

            <TextView
                android:id="@+id/textView4"
                style="@style/style_tv_title_df"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/mavared_death"
                app:layout_constraintBottom_toTopOf="@+id/view11"
                app:layout_constraintEnd_toEndOf="@+id/view11"
                app:layout_constraintTop_toTopOf="@+id/view11" />

            <TextView
                android:id="@+id/textView5"
                style="@style/style_tv_title_df"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/mavared_recovered"
                app:layout_constraintBottom_toTopOf="@+id/view12"
                app:layout_constraintEnd_toEndOf="@id/view12"
                app:layout_constraintTop_toTopOf="@id/view12"

                />

            <TextView
                android:id="@+id/textView6"
                style="@style/style_tv_st_df"
                android:layout_height="0dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="16dp"
                android:text="@string/all"
                app:autoSizeMaxTextSize="16sp"
                app:autoSizeMinTextSize="12sp"
                app:layout_constraintBottom_toTopOf="@+id/tv_today_st_df"
                app:layout_constraintEnd_toEndOf="@+id/view"
                app:layout_constraintTop_toBottomOf="@+id/tv_mavared_ebtela_st" />

            <TextView
                android:id="@+id/tv_today_st_df"
                style="@style/style_tv_st_df"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_marginEnd="16dp"
                android:text="@string/today"
                app:layout_constraintBottom_toTopOf="@+id/textView9"
                app:layout_constraintEnd_toEndOf="@+id/view"
                app:layout_constraintTop_toBottomOf="@+id/textView6" />

            <TextView
                android:id="@+id/textView9"
                style="@style/style_tv_st_df"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_marginEnd="16dp"
                android:text="@string/critical"
                android:textAlignment="center"
                app:layout_constraintBottom_toTopOf="@+id/textView10"
                app:layout_constraintEnd_toEndOf="@+id/view"
                app:layout_constraintTop_toBottomOf="@+id/tv_today_st_df" />

            <TextView
                android:id="@+id/textView10"
                style="@style/style_tv_st_df"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_marginEnd="16dp"
                android:text="@string/one_per_million"
                app:layout_constraintBottom_toTopOf="@+id/textView13"
                app:layout_constraintEnd_toEndOf="@+id/view"
                app:layout_constraintTop_toBottomOf="@+id/textView9" />

            <TextView
                android:id="@+id/textView12"
                style="@style/style_tv_st_df"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_marginEnd="16dp"
                android:text="@string/one_per_people"
                app:layout_constraintBottom_toBottomOf="@+id/view"
                app:layout_constraintEnd_toEndOf="@+id/view"
                app:layout_constraintTop_toBottomOf="@+id/textView13" />

            <TextView
                android:id="@+id/textView13"
                style="@style/style_tv_st_df"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_marginEnd="16dp"
                android:text="@string/cases_per_population_st"
                app:layout_constraintBottom_toTopOf="@+id/textView12"
                app:layout_constraintEnd_toEndOf="@+id/view"
                app:layout_constraintTop_toBottomOf="@+id/textView10" />

            <TextView
                android:id="@+id/textView14"
                style="@style/style_tv_numbers"
                android:text="..."
                app:layout_constraintBottom_toBottomOf="@+id/textView6"
                app:layout_constraintEnd_toStartOf="@+id/textView6"
                app:layout_constraintStart_toStartOf="@+id/view"
                app:layout_constraintTop_toTopOf="@+id/textView6" />

            <TextView
                android:id="@+id/textView15"
                style="@style/style_tv_numbers"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:text="..."
                android:textAlignment="center"
                app:layout_constraintBottom_toBottomOf="@+id/textView9"
                app:layout_constraintEnd_toStartOf="@+id/textView9"
                app:layout_constraintStart_toStartOf="@+id/view"
                app:layout_constraintTop_toTopOf="@+id/textView9" />

            <TextView
                android:id="@+id/textView16"
                style="@style/style_tv_numbers"
                android:layout_width="0dp"
                android:text="..."
                android:textAlignment="center"
                app:layout_constraintBottom_toBottomOf="@+id/tv_today_st_df"
                app:layout_constraintEnd_toStartOf="@+id/tv_today_st_df"
                app:layout_constraintStart_toStartOf="@+id/view"
                app:layout_constraintTop_toTopOf="@+id/tv_today_st_df" />

            <TextView
                android:id="@+id/textView17"
                style="@style/style_tv_numbers"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:text="..."
                app:layout_constraintBottom_toBottomOf="@+id/textView10"
                app:layout_constraintEnd_toStartOf="@+id/textView10"
                app:layout_constraintStart_toStartOf="@+id/view"
                app:layout_constraintTop_toTopOf="@+id/textView10" />

            <TextView
                android:id="@+id/textView18"
                style="@style/style_tv_numbers"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:text="..."
                app:layout_constraintBottom_toBottomOf="@+id/textView13"
                app:layout_constraintEnd_toStartOf="@+id/textView13"
                app:layout_constraintStart_toStartOf="@+id/view"
                app:layout_constraintTop_toTopOf="@+id/textView13" />

            <TextView
                android:id="@+id/textView19"
                style="@style/style_tv_numbers"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:text="..."
                app:layout_constraintBottom_toBottomOf="@+id/textView12"
                app:layout_constraintEnd_toStartOf="@+id/textView12"
                app:layout_constraintStart_toStartOf="@+id/view"
                app:layout_constraintTop_toTopOf="@+id/textView12" />

            <TextView
                android:id="@+id/textView20"
                style="@style/style_tv_st_df"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="16dp"
                android:text="@string/all"
                app:layout_constraintBottom_toTopOf="@+id/textView21"
                app:layout_constraintEnd_toEndOf="@+id/view10"
                app:layout_constraintTop_toBottomOf="@+id/textView2" />

            <TextView
                android:id="@+id/textView21"
                style="@style/style_tv_st_df"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:text="@string/one_per_million"
                app:layout_constraintBottom_toTopOf="@+id/textView22"
                app:layout_constraintEnd_toEndOf="@+id/textView20"
                app:layout_constraintTop_toBottomOf="@+id/textView20" />

            <TextView
                android:id="@+id/textView22"
                style="@style/style_tv_st_df"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:text="@string/one_per_people"
                app:layout_constraintBottom_toTopOf="@+id/textView23"
                app:layout_constraintEnd_toEndOf="@+id/textView21"
                app:layout_constraintTop_toBottomOf="@+id/textView21" />

            <TextView
                android:id="@+id/textView23"
                style="@style/style_tv_st_df"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:text="@string/tests_per_population_st"
                app:layout_constraintBottom_toBottomOf="@+id/view10"
                app:layout_constraintEnd_toEndOf="@+id/textView22"
                app:layout_constraintTop_toBottomOf="@+id/textView22" />

            <TextView
                android:id="@+id/textView24"
                style="@style/style_tv_numbers"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:text="..."
                android:textAlignment="center"
                app:layout_constraintBottom_toBottomOf="@+id/textView20"
                app:layout_constraintEnd_toStartOf="@+id/textView20"
                app:layout_constraintStart_toStartOf="@+id/view10"
                app:layout_constraintTop_toTopOf="@+id/textView20" />

            <TextView
                android:id="@+id/textView25"
                style="@style/style_tv_numbers"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:text="..."
                android:textAlignment="center"
                app:layout_constraintBottom_toBottomOf="@+id/textView21"
                app:layout_constraintEnd_toStartOf="@+id/textView21"
                app:layout_constraintStart_toStartOf="@+id/view10"
                app:layout_constraintTop_toTopOf="@+id/textView21" />

            <TextView
                android:id="@+id/textView26"
                style="@style/style_tv_numbers"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:text="..."
                android:textAlignment="center"
                app:layout_constraintBottom_toBottomOf="@+id/textView22"
                app:layout_constraintEnd_toStartOf="@+id/textView22"
                app:layout_constraintStart_toStartOf="@+id/view10"
                app:layout_constraintTop_toBottomOf="@+id/textView21" />

            <TextView
                android:id="@+id/textView27"
                style="@style/style_tv_numbers"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:text="..."
                android:textAlignment="center"
                app:layout_constraintBottom_toBottomOf="@+id/textView23"
                app:layout_constraintEnd_toStartOf="@+id/textView23"
                app:layout_constraintStart_toStartOf="@+id/view10"
                app:layout_constraintTop_toTopOf="@+id/textView23" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>


</LinearLayout>