<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/frameLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:textAlignment="center"
    tools:context=".fragments.HomeFragment">


    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:scaleType="fitCenter"
        android:src="@drawable/covid_earth"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/samim"
        android:layoutDirection="ltr"
        android:paddingHorizontal="10dp"
        android:paddingVertical="3dp"
        android:text="آخرین بروزرسانی:"
        app:layout_constraintBottom_toBottomOf="@+id/tv_date"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/tv_date" />

    <TextView
        android:id="@+id/tv_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:fontFamily="sans-serif"
        android:layoutDirection="ltr"
        android:paddingHorizontal="10dp"
        android:paddingVertical="3dp"
        android:textAlignment="center"
        app:layout_constraintEnd_toStartOf="@+id/textView3"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView2" />


    <View
        android:id="@+id/view2"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="20dp"
        android:background="@drawable/shape_bg_view_back_for_home"
        android:padding="5dp"
        app:layout_constraintBottom_toTopOf="@+id/view4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_max="100dp"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/view3"
        app:layout_constraintTop_toBottomOf="@+id/textView3"
        app:layout_constraintVertical_chainStyle="packed" />

    <View
        android:id="@+id/view3"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="8dp"
        android:background="@drawable/shape_bg_view_back_for_home"
        android:padding="5dp"
        app:layout_constraintBottom_toTopOf="@+id/view5"
        app:layout_constraintEnd_toStartOf="@+id/view2"
        app:layout_constraintHeight_max="100dp"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintHorizontal_chainStyle="spread"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/view2"
        app:layout_constraintVertical_chainStyle="spread_inside" />

    <View
        android:id="@+id/view4"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/shape_bg_view_back_for_home"
        android:padding="5dp"
        app:layout_constraintBottom_toTopOf="@+id/view6"
        app:layout_constraintEnd_toEndOf="@+id/view2"
        app:layout_constraintHeight_max="100dp"

        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/view2"
        app:layout_constraintTop_toBottomOf="@+id/view2" />

    <View
        android:id="@+id/view5"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:background="@drawable/shape_bg_view_back_for_home"
        android:padding="5dp"
        app:layout_constraintBottom_toTopOf="@+id/view7"
        app:layout_constraintEnd_toStartOf="@+id/view4"
        app:layout_constraintHeight_max="100dp"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/view3"
        app:layout_constraintTop_toBottomOf="@+id/view3" />

    <View
        android:id="@+id/view6"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="16dp"
        android:background="@drawable/shape_bg_view_back_for_home"
        android:padding="5dp"
        app:layout_constraintBottom_toTopOf="@+id/tv_alert_no_internet"
        app:layout_constraintEnd_toEndOf="@+id/view4"
        app:layout_constraintHeight_max="100dp"
        app:layout_constraintStart_toEndOf="@+id/view7"
        app:layout_constraintTop_toBottomOf="@+id/view4" />

    <View
        android:id="@+id/view7"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:background="@drawable/shape_bg_view_back_for_home"
        app:layout_constraintBottom_toBottomOf="@+id/view6"
        app:layout_constraintEnd_toStartOf="@+id/view6"
        app:layout_constraintHeight_max="100dp"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintHorizontal_chainStyle="spread_inside"
        app:layout_constraintStart_toStartOf="@+id/view5"
        app:layout_constraintTop_toBottomOf="@+id/view5" />

    <TextView
        android:id="@+id/tv__st_cases"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:fontFamily="@font/samim"
        android:padding="5dp"
        android:text="@string/text_all_in_world"
        android:textAlignment="center"
        android:textColor="?attr/colorPrimaryVariant"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="@+id/view2"
        app:layout_constraintStart_toStartOf="@+id/view2"
        app:layout_constraintTop_toTopOf="@+id/view2" />

    <TextView
        android:id="@+id/tv_st_cases_today"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginStart="5dp"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="5dp"
        android:fontFamily="@font/samim"
        android:padding="5dp"
        android:text="@string/text_all_in_world_today"
        android:textAlignment="center"
        android:textColor="?attr/colorPrimaryVariant"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="@+id/view3"
        app:layout_constraintStart_toStartOf="@+id/view3"
        app:layout_constraintTop_toTopOf="@+id/view3" />

    <TextView
        android:id="@+id/tv_show_cases"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="5dp"
        android:layout_marginBottom="4dp"
        android:fontFamily="@font/samim_number"
        android:textColor="?attr/colorPrimaryVariant"
        android:textSize="15sp"
        app:layout_constraintBottom_toBottomOf="@+id/view2"
        app:layout_constraintEnd_toEndOf="@+id/view2"
        app:layout_constraintStart_toStartOf="@+id/view2"
        app:layout_constraintTop_toBottomOf="@+id/tv__st_cases"
        tools:text="87878774542" />

    <TextView
        android:id="@+id/tv_st_deaths"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:fontFamily="@font/samim"
        android:padding="5dp"
        android:text="@string/text_deaths"
        android:textColor="?attr/colorPrimaryVariant"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="@+id/view4"
        app:layout_constraintStart_toStartOf="@+id/view4"
        app:layout_constraintTop_toTopOf="@+id/view4" />

    <TextView
        android:id="@+id/tv_death_all"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="5dp"
        android:layout_marginBottom="4dp"
        android:fontFamily="@font/samim_number"
        android:textColor="?attr/colorPrimaryVariant"
        android:textSize="15sp"
        app:layout_constraintBottom_toBottomOf="@+id/view4"
        app:layout_constraintEnd_toEndOf="@+id/view4"
        app:layout_constraintStart_toStartOf="@+id/view4"
        app:layout_constraintTop_toBottomOf="@+id/tv_st_deaths"
        tools:text="65471254" />

    <TextView
        android:id="@+id/tv_st_recovered"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:fontFamily="@font/samim"
        android:padding="5dp"
        android:text="@string/text_recovered"
        android:textColor="?attr/colorPrimaryVariant"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="@+id/view6"
        app:layout_constraintStart_toStartOf="@+id/view6"
        app:layout_constraintTop_toTopOf="@+id/view6" />

    <TextView
        android:id="@+id/tv_show_recovered"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="5dp"
        android:layout_marginBottom="4dp"
        android:fontFamily="@font/samim_number"
        android:textColor="@color/m_green_2"
        android:textSize="15sp"
        app:layout_constraintBottom_toBottomOf="@+id/view6"
        app:layout_constraintEnd_toEndOf="@+id/view6"
        app:layout_constraintStart_toStartOf="@+id/view6"
        app:layout_constraintTop_toBottomOf="@+id/tv_st_recovered"
        tools:text="45121545" />

    <TextView
        android:id="@+id/tv_by_country"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:background="@drawable/shape_bg_btn_view_by_country"
        android:fontFamily="@font/samim"
        android:paddingVertical="10dp"
        android:text="@string/text_by_country"
        android:textAlignment="center"
        android:textColor="?attr/colorOnPrimary"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="@+id/view6"
        app:layout_constraintStart_toStartOf="@+id/view7"
        app:layout_constraintTop_toBottomOf="@id/tv_alert_no_internet" />

    <TextView
        android:id="@+id/tv_alert_no_internet"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="16dp"
        android:fontFamily="sans-serif"
        android:text="@string/no_internet_alert_text"
        android:textColor="#BF04BF"
        android:visibility="gone"
        app:layout_constraintBottom_toTopOf="@+id/tv_by_country"
        app:layout_constraintEnd_toEndOf="@+id/tv_by_country"
        app:layout_constraintStart_toStartOf="@+id/tv_by_country"
        app:layout_constraintTop_toBottomOf="@id/view6" />

    <TextView
        android:id="@+id/tv_cases_today_hf"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="5dp"
        android:layout_marginBottom="4dp"
        android:fontFamily="@font/samim_number"
        android:textColor="?attr/colorPrimaryVariant"
        android:textSize="15sp"
        app:layout_constraintBottom_toBottomOf="@+id/view3"
        app:layout_constraintEnd_toEndOf="@+id/view3"
        app:layout_constraintStart_toStartOf="@+id/view3"
        app:layout_constraintTop_toBottomOf="@+id/tv_st_cases_today"
        tools:text="54848" />

    <TextView
        android:id="@+id/tv_st_death_today"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:fontFamily="@font/samim"
        android:padding="5dp"
        android:text="@string/text_deaths_today"
        android:textColor="?attr/colorPrimaryVariant"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="@+id/view5"
        app:layout_constraintStart_toStartOf="@+id/view5"
        app:layout_constraintTop_toTopOf="@+id/view5" />

    <TextView
        android:id="@+id/tv_death_today"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:layout_marginBottom="4dp"
        android:fontFamily="@font/samim_number"
        android:textColor="?attr/colorPrimaryVariant"
        android:textSize="15sp"
        app:layout_constraintBottom_toBottomOf="@+id/view5"
        app:layout_constraintEnd_toEndOf="@+id/view5"
        app:layout_constraintStart_toStartOf="@+id/view5"
        app:layout_constraintTop_toBottomOf="@+id/tv_st_death_today"
        tools:text="5412" />

    <TextView
        android:id="@+id/tv_st_recovered_today"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="5dp"
        android:fontFamily="@font/samim"
        android:padding="5dp"
        android:text="@string/text_recovered_today"
        android:textColor="?attr/colorPrimaryVariant"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="@+id/view7"
        app:layout_constraintStart_toStartOf="@+id/view7"
        app:layout_constraintTop_toTopOf="@+id/view7" />

    <TextView
        android:id="@+id/tv_recovered_today"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="5dp"
        android:layout_marginBottom="4dp"
        android:fontFamily="@font/samim_number"
        android:textColor="@color/m_green_2"
        android:textSize="15sp"
        app:layout_constraintBottom_toBottomOf="@+id/view7"
        app:layout_constraintEnd_toEndOf="@+id/view7"
        app:layout_constraintStart_toStartOf="@+id/view7"
        app:layout_constraintTop_toBottomOf="@+id/tv_st_recovered_today"
        tools:text="541212" />

</androidx.constraintlayout.widget.ConstraintLayout>